--- a/src/app/routes/home/home-page/home-page.html
+++ b/src/app/routes/home/home-page/home-page.html
@@ -1,1 +1,5 @@
-<app-hero-section />
+<div class="min-h-screen bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900">
+  <app-hero-section />
+  <app-feature-section />
+  <app-pricing-home-section />
+</div>
